@@ -20,6 +20,7 @@ Release 0.19.0 - Unreleased
    HBASE-837   Add unit tests for ThriftServer.HBaseHandler (Izaak Rubin via Stack)
    HBASE-913   Classes using log4j directly
    HBASE-914   MSG_REPORT_CLOSE has a byte array for a message
+   HBASE-918   Region balancing during startup makes cluster unstable
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
